src/styles/globals.css
/* ... */
.social-media-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.social-media-content ul {
  display: flex;
  flex-direction: row;
  list-style: none;
  align-items: center;
  gap: 8px;
}

.social-media-content ul li {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 40px;
  height: 40px;
  border-radius: 8px;
  background-color: #2e2829;
  cursor: pointer;
}

.contact-content .contact-list {
  display: flex;
  flex-direction: row;
  width: auto;
  justify-content: space-between;
  align-items: first baseline;
  gap: 20px;
  padding: 0px;
}

.contact-content .contact-list .contact-item {
  background-color: transparent;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 8px;
  align-items: center;
}

.contact-content .contact-list .contact-item svg {
  width: 35px;
  height: 35px;
}

.contact-content .contact-list .contact-item span {
  text-wrap: wrap;
  text-align: center;
  font-size: 14px;
}

.social-media-content ul li:active {
  transform: scale(0.9);
}

.products-grid {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 20px;
  justify-items: center;
  width: 100%;
}

.products-list {
  display: flex;
  flex-direction: column;
  justify-items: center;
  width: 80%;
}

.product-card {
  display: flex;
  flex-direction: row;
  background-color: white;
  border-radius: 15px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
  max-width: 100%;
  width: 100%;
}

.product-card-modal {
  display: flex;
  flex-direction: row;
  border-radius: 15px;
  max-width: 100%;
  width: 100%;
}

.product-card .product-info {
  padding: 0.5rem 1rem;
}

.product-info {
  flex: 1;
  padding-right: 30px;
  display: flex;
  flex-direction: column;
}

.product-title {
  font-size: 1.5em;
  margin-bottom: 0.5rem;
}

.product-description {
  color: #777;
  font-size: 1em;
  margin-bottom: 0.5rem;
}

.product-colors {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

.color-option {
  width: 20px;
  height: 20px;
  border-radius: 50%;
  margin-right: 10px;
  cursor: pointer;
  border: 1px solid #ddd;
}

.color-option.blue {
  background-color: blue;
}

.color-option.green {
  background-color: green;
}

.color-option.red {
  background-color: red;
}

.product-price {
  font-size: 1.5em;
  margin-bottom: 20px;
}

.buy-button {
  background-color: #333;
  color: white;
  border: none;
  padding: 15px 30px;
  font-size: 1em;
  border-radius: 5px;
  cursor: pointer;
  display: flex;
  align-items: center;
}

.buy-button:active {
  transform: scale(0.9);
}

.buy-button span {
  margin-left: 10px;
}

.product-image {
  flex: 1;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.product-image-container {
  aspect-ratio: 2 / 3;
  position: relative;
  width: 100%;
  height: auto;
}

.product-image img {
  width: 100%;
  height: auto;
  border-radius: 8px;
  object-fit: cover;
}

.add-to-bag {
  position: absolute;
  top: 30px;
  right: 0;
  background-color: white;
  border: 1px solid #333;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  font-size: 0.9em;
}

.product-thumbnails {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.product-thumbnails p {
  margin: 0;
  font-size: 0.9em;
  color: #777;
}

.thumbnail-images {
  display: flex;
  margin: 0.5rem 0;
}

.thumbnail-images img {
  width: 50px;
  height: 50px;
  margin-right: 10px;
  cursor: pointer;
}

.cart-container {
  display: flex;
  justify-content: center;
  justify-content: space-between;
  padding: 20px;
  width: 100%;
  gap: 10px;
  height: 100%;
}

.cart {
  width: 70%;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

.cart h1 {
  margin-bottom: 20px;
}

.cart-item {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
  border-bottom: 1px solid #ddd;
  padding-bottom: 20px;
}

.cart-item img {
  width: 80px;
  height: 80px;
  margin-right: 20px;
  border-radius: 8px;
}

.item-details {
  flex-grow: 1;
}

.item-details h2 {
  font-size: 18px;
  margin-bottom: 0;
}

.item-options {
  display: flex;
  align-items: center;
  margin-top: 10px;
  justify-content: space-between;
}

.item-options select {
  padding: 5px;
  margin-right: 10px;
}

.quantity-control {
  display: flex;
  align-items: center;
  justify-content: space-around;
  gap: 15px;
  border: 1px solid #ddd;
  border-radius: 8px;
  overflow: hidden;
}

.quantity-control button:last-child {
  border-left: 1px solid #ddd
}

.quantity-control button:first-child {
  border-right: 1px solid #ddd
}

.quantity-control button {
  display: inline-block;
  border: none;
  margin: 0px;
  width: 40px;
  text-align: center;
  vertical-align: middle;
  justify-content: center;
  background: rgb(var(--color-gray-900));
  color: white;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.quantity-control button:hover {
  cursor: pointer;
}

.item-actions {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.item-actions button {
  background-color: transparent;
  border: none;
  color: #555;
  cursor: pointer;
  margin: 5px 0;
}

.summary {
  width: 30%;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
}

.summary h2 {
  margin-bottom: 20px;
}

.delivery-options {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

.delivery-btn {
  background-color: #f1f1f1;
  border: none;
  padding: 10px;
  cursor: pointer;
}

.promo-section {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

.promo-section input {
  flex-grow: 1;
  padding: 8px;
  margin-right: 10px;
}

.promo-section button {
  padding: 8px;
  background-color: #5f3713;
  color: white;
  border: none;
  cursor: pointer;
  border-radius: 8px;
}
/* ... */

